plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.2'
    id 'io.spring.dependency-management' version '1.1.0'

}

group = 'com.uliga'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    // 스프링 부트 3
    implementation 'org.springframework.boot:spring-boot-starter-web'
    // 스프링 데이터 JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    // 스프링 레디스
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    // 이메일 모듈
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    // Validation 모듈 추가
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    // 스프링 시큐리티
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-test'
    // MyBatis
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1'
    // OAuth
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    // Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3'
    // actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    // cookie
    implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
    // JWT
    compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'


    // MySql
    runtimeOnly 'mysql:mysql-connector-java'


    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // MockMvc
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

    // Junit
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation ('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine' //Junit4제외
    }
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
    // 스프링 시큐리티 테스트
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    // Mockito
    testImplementation 'org.mockito:mockito-core'
    testImplementation 'org.mockito:mockito-junit-jupiter'
    // Hamcrest
    testImplementation 'org.hamcrest:hamcrest-library'
}

tasks.named('test') {
    useJUnitPlatform()
}

